<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:background="@drawable/gradient"
              android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:text="@string/sole_du_relev"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/textWhiteColor"
            android:layout_height="wrap_content"
            android:id="@+id/txtSoldeReleve"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/textWhiteColor"
            android:id="@+id/edtSommeCompte"
            android:gravity="center"
            android:textColorHint="@color/textWhiteColor"
            android:hint="@string/somme_du_compte" android:inputType="numberDecimal|numberSigned"/>
    <TextView
            android:text="@string/solde_atteindre"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/textWhiteColor"
            android:layout_height="wrap_content"
            android:id="@+id/txtSoldeAtteindre"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/textWhiteColor"
            android:text="@string/sommeDiff"
            android:id="@+id/edtSoldeAtteindre"
            android:gravity="center"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/lstOperationsRappro"/>
    <Button
            android:text="@string/d_marrer_rapprochement"
            android:layout_width="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_marginBottom="20dp"
            android:textColor="@color/textRedColorDesign"
            android:layout_height="wrap_content" android:id="@+id/btnStartRapp"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:text="@string/valider_rapprochement"
            android:enabled="false"
            android:background="@drawable/roundedbutton"
            android:textColor="@color/textRedColorDesign"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content" android:id="@+id/btnValidateRapp"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>